[gd_scene load_steps=11 format=3 uid="uid://dk6jgje1qb0t1"]

[ext_resource type="Texture2D" uid="uid://dnoj0v8s12y6n" path="res://Assets/graphics/Enemies/worm/1.png" id="1_ry270"]
[ext_resource type="Shader" path="res://Scenes/flicker.gdshader" id="1_sepxc"]
[ext_resource type="Script" path="res://Scenes/worm.gd" id="1_ywlaa"]
[ext_resource type="Texture2D" uid="uid://mtprgrjlr51q" path="res://Assets/graphics/Enemies/worm/0.png" id="4_nlbkw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5h77b"]
shader = ExtResource("1_sepxc")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/amount = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_fy2j5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_nlbkw")
}, {
"duration": 1.0,
"texture": ExtResource("1_ry270")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ofmmt"]
size = Vector2(12, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c1cwu"]
size = Vector2(14, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pcbjj"]
size = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_30tnx"]
size = Vector2(2, 2)

[node name="Worm" type="Area2D"]
collision_layer = 4
collision_mask = 19
script = ExtResource("1_ywlaa")

[node name="Sprites" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_5h77b")
sprite_frames = SubResource("SpriteFrames_fy2j5")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ofmmt")

[node name="BorderArea" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BorderArea"]
shape = SubResource("RectangleShape2D_c1cwu")

[node name="LeftCliffDetect" type="Area2D" parent="."]
collision_layer = 4

[node name="LeftDetect" type="CollisionShape2D" parent="LeftCliffDetect"]
position = Vector2(-8, 5)
shape = SubResource("RectangleShape2D_pcbjj")

[node name="RightCliffDetect" type="Area2D" parent="."]
collision_layer = 4

[node name="RightDetect" type="CollisionShape2D" parent="RightCliffDetect"]
position = Vector2(8, 5)
shape = SubResource("RectangleShape2D_30tnx")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="BorderArea" to="." method="_on_border_area_body_entered"]
[connection signal="body_exited" from="LeftCliffDetect" to="." method="_on_cliff_detect_body_exited"]
[connection signal="body_exited" from="RightCliffDetect" to="." method="_on_cliff_detect_body_exited"]
